[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/images/menu_background.jpg" type="Texture" id=1]
[ext_resource path="res://resources/fonts/title_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/themes/gui_theme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://scripts/GlobalVariables.gd" type="Script" id=5]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.317647 )
self_modulate = Color( 0.27451, 0.258824, 0.258824, 1 )
margin_left = 2.0
margin_top = -1.0
margin_right = 1282.0
margin_bottom = 719.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="."]
margin_left = 280.0
margin_top = 79.0
margin_right = 1023.0
margin_bottom = 203.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Joca's World Generator[/center]"
text = "Joca's World Generator"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonholder" type="MarginContainer" parent="."]
margin_left = 324.0
margin_top = 306.0
margin_right = 967.0
margin_bottom = 705.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="buttonholder"]
margin_right = 643.0
margin_bottom = 399.0

[node name="newGame" type="Button" parent="buttonholder/VBoxContainer"]
margin_right = 643.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
theme = ExtResource( 3 )
text = "New Game"

[node name="loadGame" type="Button" parent="buttonholder/VBoxContainer"]
margin_top = 52.0
margin_right = 643.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 48 )
theme = ExtResource( 3 )
text = "Load Game"

[node name="options" type="Button" parent="buttonholder/VBoxContainer"]
margin_top = 104.0
margin_right = 643.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 48 )
theme = ExtResource( 3 )
text = "Options"

[node name="exit" type="Button" parent="buttonholder/VBoxContainer"]
margin_top = 156.0
margin_right = 643.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 48 )
theme = ExtResource( 3 )
text = "Quit Game"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 639, 361 )
current = true

[node name="GlobalVariables" type="Node" parent="."]
script = ExtResource( 5 )

[connection signal="pressed" from="buttonholder/VBoxContainer/newGame" to="." method="_on_newGame_pressed"]
[connection signal="pressed" from="buttonholder/VBoxContainer/loadGame" to="." method="_on_loadGame_pressed"]
[connection signal="pressed" from="buttonholder/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="buttonholder/VBoxContainer/exit" to="." method="_on_exit_pressed"]
